changed images and log function added

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,15 +1,20 @@
 * {
     box-sizing: border-box;
+    font-family: 'IBM Plex Mono', monospace;
+    text-align: center;
 }
 
 .row {
   display: flex;
 }
 
-.col {
-    flex: 50%;
-    padding: 10px
-  }
+.left {
+    flex: 70%;
+    
+}
+.right{
+    flex: 30%;
+}
 
 .container {
     text-align: center;
@@ -21,6 +26,22 @@
 }
 
 .light {
-    width: 15%;
-    border: 2px solid black;
+    width: 200px;
+    height: 200px;
+    border: 2px solid white;
+}
+.canoo {
+    width: 150px;
+    height: 150px;
+    border-color: white;
+    overflow: hidden;
+    text-align : right
+}
+
+.delete {
+    font-size:"30px";
+    color : white;
+    font-weight: 700;
+   
+
 }
