--- a/src/style/main.css
+++ b/src/style/main.css
@@ -102,7 +102,7 @@ div.MuiListItem-root{
 }
 .MuiTypography-body1 {
     font-family: 'IBM Plex Mono', monospace !important;
-    color : rgb(245, 55, 200);
+    color : rgb(245, 55, 55);
     text-align: left !important;
 }
 .log-list{
@@ -129,7 +129,22 @@ div.MuiListItem-root{
     margin-right: 10px;
    
 }
+.lastLog {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+    width: 100%;
+    height: 3rem;
+    text-align: center;   
+    background-color: rgb(57, 56, 56);
+    color : rgb(245, 55, 55);  
+    font-size: 20px;
+    margin-top: 7px;
+    justify-content: center;
+    padding-top: 0.5rem;
 
+
+}
 /* .MuiSlider-rail:first-child {
     margin-left: 5px;
 } */
