--- a/src/style/main.css
+++ b/src/style/main.css
@@ -136,7 +136,7 @@ div.MuiListItem-root{
     width: 100%;
     height: 3rem;
     text-align: center;   
-    background-color: rgb(57, 56, 56);
+    background-color: rgb(17,17,17);
     color : rgb(245, 55, 55);  
     font-size: 20px;
     margin-top: 7px;
