--- a/src/style/main.css
+++ b/src/style/main.css
@@ -34,8 +34,8 @@
 }
 
 p {
-    font-size: 15px;
-    margin-bottom: 6px;
+    font-size: 20px;
+    margin : 9px 0;
 }
 
 button {
@@ -77,6 +77,7 @@ p.tempature {
     width: 150px;
     height: 100px;
     cursor: pointer;
+    margin-top: 15px;
 }
 
 .notification {
@@ -89,6 +90,7 @@ span.MuiSwitch-track {
 
 div.MuiSvgIcon-root path {
     cursor: pointer;
+
 }
 
 .MuiBadge-badge {
@@ -97,6 +99,7 @@ div.MuiSvgIcon-root path {
     font-size: 0.9rem !important;
     font-weight: bold !important;
     z-index: 0 !important;
+    margin-top: 25px;
 }
 div.MuiListItem-root{
     width: 33%;
@@ -108,10 +111,11 @@ div.MuiListItem-root{
     font-family: 'IBM Plex Mono', monospace !important;
     color : rgb(245, 55, 55);
     text-align: left !important;
+    font-size: 25px !important;
 }
 
 .makeStyles-root-8{
-    margin: 20px 0;
+    margin: 30px 0;
 }
 .log-list{
     background-color: black;
@@ -184,4 +188,8 @@ button {
     .MuiSnackbarContent-root{
         font-size: 20px!important;
     }
+    .MuiTypography-body1 {
+        font-size: 15px !important;
+    }
+    
 }
