--- a/client-react/src/style/main.css
+++ b/client-react/src/style/main.css
@@ -34,7 +34,7 @@
 }
 
 p {
-    font-size: 20px;
+    font-size: 13px;
     margin : 9px 0;
 }
 
@@ -106,12 +106,11 @@ div.MuiListItem-root{
     display: inline-block;
     cursor: default;
     background-color: black;
+  
 }
 .MuiTypography-body1 {
     font-family: 'IBM Plex Mono', monospace !important;
     color : rgb(245, 55, 55);
-    text-align: left !important;
-    font-size: 25px !important;
 }
 
 .makeStyles-root-8{
@@ -120,6 +119,7 @@ div.MuiListItem-root{
 .log-list{
     background-color: black;
     height: 350px;
+    text-align: left !important;
  
 }
 .MuiPaper-root{
@@ -127,25 +127,26 @@ div.MuiListItem-root{
 
 }
 
-.PrivateValueLabel-label-7{
+.MuiSlider-valueLabel span span{
     color: purple !important;
     font-size: 17px;
 }
 
 .thermostat{
-    width: 340px !important;;
-    height: 340px !important;;
+    width: 45% !important;;
     background: red;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
     margin: 0 auto;
- 
+    margin-top: 20px;
+    
     padding-left: 5px
     
 }
 .MuiSlider-root{
     margin-top: 10px;
+
 }
 
 .MuiSlider-markLabel {
@@ -166,7 +167,7 @@ div.MuiListItem-root{
     background-color: rgb(17, 17, 17)!important;
     display: inline !important;
     color : rgb(245, 55, 55)!important;
-    font-size: 30px!important;
+    font-size: 18px!important;
 }
 
 .MuiSvgIcon-root{
